--- a/public/css/items.css
+++ b/public/css/items.css
@@ -13,8 +13,11 @@
   justify-content: center;
   border-radius: 15px;
   background-color: var(--card-color);
-  padding: 10px;
   transition: all 0.2s;
+}
+
+.item-card .content {
+  padding: 10px;
 }
 
 .item-card a {
@@ -22,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  width: 100%;
   text-decoration: none;
   color: var(--text-color);
 }
